add_subdirectory(ActivationEngine)
add_subdirectory(APIEngine)
add_subdirectory(DataBaseEngine)
add_subdirectory(DynamicCodeExecutionEngine)
add_subdirectory(EngineInterface)
add_subdirectory(GraphEngine)
add_subdirectory(LossEngine)
add_subdirectory(NetworkEngine)
add_subdirectory(OptimizationEngine)
add_subdirectory(SerializationEngine)
add_subdirectory(UIEngine)