file(GLOB_RECURSE NodeInterface
        ${CMAKE_SOURCE_DIR}/Interfaces/Engines/GraphEngine/Nodes/NodeInterface/*.h
        ${CMAKE_SOURCE_DIR}/Interfaces/Engines/GraphEngine/Nodes/NodeInterface/*.cpp)

file(GLOB_RECURSE APINodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/APINode/*.cpp)
file(GLOB_RECURSE AtIndexNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/AtIndexNode/*.cpp)
file(GLOB_RECURSE ColumnNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/ColumnNode/*.cpp)
file(GLOB_RECURSE ConstantInputDataSetNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/ConstantInputDataSetNode/*.cpp)
file(GLOB_RECURSE ConstantLossDataSetNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/ConstantLossDataSetNode/*.cpp)
file(GLOB_RECURSE ConstantLossNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/ConstantLossNode/*.cpp)
file(GLOB_RECURSE ConstantValueNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/ConstantValueNode/*.cpp)
file(GLOB_RECURSE ControllerNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/ControllerNode/*.cpp)
file(GLOB_RECURSE ConversionNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/ConversionNode/*.cpp)
file(GLOB_RECURSE Convolution2DNetworkNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/Convolution2DNetworkNode/*.cpp)
file(GLOB_RECURSE Convolution2DNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/Convolution2DNode/*.cpp)
file(GLOB_RECURSE Convolution3DNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/Convolution3DNode/*.cpp)
file(GLOB_RECURSE DatabaseInputNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/DatabaseInputNode/*.cpp)
file(GLOB_RECURSE DataToMatrixSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/DataToMatrix/*.cpp)
file(GLOB_RECURSE DataToTensorSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/DataToTensor/*.cpp)
file(GLOB_RECURSE DelayOutputNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/DelayOutputNode/*.cpp)
file(GLOB_RECURSE DictionaryNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/DictionaryNode/*.cpp)
file(GLOB_RECURSE FileVisualizationNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/FileVisualizationNode/*.cpp)
file(GLOB_RECURSE FlattenNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/FlattenNode/*.cpp)
file(GLOB_RECURSE FullyConnectedNetworkNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/FullyConnectedNetworkNode/*.cpp)
file(GLOB_RECURSE ImageLossNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/ImageLossNode/*.cpp)
file(GLOB_RECURSE ImageNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/ImageNode/*.cpp)
file(GLOB_RECURSE KinectNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/KinectNode/*.cpp)
file(GLOB_RECURSE LayerNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/LayerNode/*.cpp)
file(GLOB_RECURSE MathNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/MathNode/*.cpp)
file(GLOB_RECURSE NormalizeNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/NormalizeNode/*.cpp)
file(GLOB_RECURSE OneHotNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/OneHotNode/*.cpp)
file(GLOB_RECURSE PositionalEncodingNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/PositionalEncodingNode/*.cpp)
file(GLOB_RECURSE RecurrentLayerNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/RecurrentLayerNode/*.cpp)
file(GLOB_RECURSE RecurrentNetworkNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/RecurrentNetworkNode/*.cpp)
file(GLOB_RECURSE ScriptNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/ScriptNode/*.cpp)
file(GLOB_RECURSE SelfAttentionLayerNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/SelfAttentionLayerNode/*.cpp)
file(GLOB_RECURSE UniqueNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/UniqueNode/*.cpp)
file(GLOB_RECURSE ViewNodeSource ${CMAKE_SOURCE_DIR}/Implimentations/Engines/GraphEngine/Nodes/ViewNode/*.cpp)


add_library(APINode SHARED ${APINodeSource} ${NodeInterface})
add_library(AtIndexNode SHARED ${AtIndexNodeSource} ${NodeInterface})
add_library(ColumnNode SHARED ${ColumnNodeSource} ${NodeInterface})
add_library(ConstantInputDataSetNode SHARED ${ConstantInputDataSetNodeSource} ${NodeInterface})
add_library(ConstantLossDataSetNode SHARED ${ConstantLossDataSetNodeSource} ${NodeInterface})
add_library(ConstantLossNode SHARED ${ConstantLossNodeSource} ${NodeInterface})
add_library(ConstantValueNode SHARED ${ConstantValueNodeSource} ${NodeInterface})
add_library(ControllerNode SHARED ${ControllerNodeSource} ${NodeInterface})
add_library(ConversionNode SHARED ${ConversionNodeSource} ${NodeInterface})
add_library(Convolution2DNetworkNode SHARED ${Convolution2DNetworkNodeSource} ${NodeInterface})
add_library(Convolution2DNode SHARED ${Convolution2DNodeSource} ${NodeInterface})
add_library(Convolution3DNode SHARED ${Convolution3DNodeSource} ${NodeInterface})
add_library(DatabaseInputNode SHARED ${DatabaseInputNodeSource} ${NodeInterface})
add_library(DataToMatrix SHARED ${DataToMatrixSource} ${NodeInterface})
add_library(DataToTensor SHARED ${DataToTensorSource} ${NodeInterface})
add_library(DelayOutputNode SHARED ${DelayOutputNodeSource} ${NodeInterface})
add_library(DictionaryNode SHARED ${DictionaryNodeSource} ${NodeInterface})
add_library(FileVisualizationNode SHARED ${FileVisualizationNodeSource} ${NodeInterface})
add_library(FlattenNode SHARED ${FlattenNodeSource} ${NodeInterface})
add_library(FullyConnectedNetworkNode SHARED ${FullyConnectedNetworkNodeSource} ${NodeInterface})
add_library(ImageLossNode SHARED ${ImageLossNodeSource} ${NodeInterface})
add_library(ImageNode SHARED ${ImageNodeSource} ${NodeInterface})
add_library(KinectNode SHARED ${KinectNodeSource} ${NodeInterface})
add_library(LayerNode SHARED ${LayerNodeSource} ${NodeInterface})
add_library(MathNode SHARED ${MathNodeSource} ${NodeInterface})
add_library(NormalizeNode SHARED ${NormalizeNodeSource} ${NodeInterface})
add_library(OneHotNode SHARED ${OneHotNodeSource} ${NodeInterface})
add_library(PositionalEncodingNode SHARED ${PositionalEncodingNodeSource} ${NodeInterface})
add_library(RecurrentLayerNode SHARED ${RecurrentLayerNodeSource} ${NodeInterface})
add_library(RecurrentNetworkNode SHARED ${RecurrentNetworkNodeSource} ${NodeInterface})
add_library(ScriptNode SHARED ${ScriptNodeSource} ${NodeInterface})
add_library(SelfAttentionLayerNode SHARED ${SelfAttentionLayerNodeSource} ${NodeInterface})
add_library(UniqueNode SHARED ${UniqueNodeSource} ${NodeInterface})
add_library(ViewNode SHARED ${ViewNodeSource} ${NodeInterface})

target_link_libraries(DatabaseInputNode PUBLIC sqlite3)